[package]
name = "rmrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.4.6", features=["cargo"]}
toml = "0.8.6"
serde = {version="1.0", features=["derive"]}
regex = "1.10.2"
path-absolutize = "3.1.1"